--- a/posts/business/science_of_leadership/leadership.qmd
+++ b/posts/business/science_of_leadership/leadership.qmd
@@ -301,120 +301,134 @@ How to **handle it**:
 To get them out of their reptilian brain mode we need to take away the perceived danger. In freeze mode, this means offering them shelter. 
 
 
-# 4. Our prior experience 
+# 4. Our Prior Experience 
 
-We explore our extrinsic motivations and how the expectations of others influences what we do. 
+We explore our **extrinsic motivations** and how *the expectations of others influences what we do*. 
 
-We don’t see the world as it is but as we are. Our mind is good at filling in the blanks, and it fills it with what we know. 
-
-We could look at the same scene and perceive it differently. Someone being confident vs arrogant vs entitled vs aggressive vs an impostor. 
-
-If we encounter unacceptable behaviour, we can address it head on and tell someone not to do that. But it doesn’t change their behaviour or perceptions. It just means that they will continue with their belief system, but be more careful about whom they share their comments with and when; they will learn to hide it better but they won’t learn to be a better person. 
-
-The Socratic questioning technique can help challenge people’s belief systems. This needs to be one on one; others can’t be listening as this needs to be open and honest. Invite the person somewhere quiet. It is important to stay neutral and not express judgement. Explain that you overheard XYZ comment and you want to address it. From then on, just act as a mirror to their responses, question what they say. Let them reach the conclusion themselves and eventually apologise. 
-
-Making crass remarks is usually the paleolimbic brain in charge. The Socratic method forces the prefrontal brain to kick in. 
+**We don’t see the world as it is but as we are**. 
+Our mind is good at filling in the blanks, and it fills it with what we know. 
+We could look at the same scene and perceive it differently: someone being confident vs arrogant vs entitled vs aggressive vs an impostor. 
 
 
-## Extrinsic motivations
+## 4.1. Socratic Questioning
+If we encounter unacceptable behaviour, we can address it head on and tell someone not to do that. But it *doesn’t change their behaviour or perceptions*. It just means that they will continue with their belief system, but be more careful about whom they share their comments with and when; **they will learn to hide it better but they won’t learn to be a better person**. 
 
-Emotional feelings of hurt generate the same brain response as physical pain. We have evolved to be deeply social animals and this gives rise to our extrinsic or secondary motivations. This kicks in at the neolimbic level to help us come together as a group and adapt to each other. 
+The **Socratic questioning** technique can help challenge people’s belief systems. This **needs to be one-on-one**; others can’t be listening as this needs to be open and honest. Invite the person somewhere quiet. It is important to *stay neutral and not express judgement*. Explain that you overheard XYZ comment and you want to address it. From then on, just act as a *mirror* to their responses, **question what they say**. **Let them reach the conclusion themselves** and eventually apologise. 
 
-The more alike we are, the more likely we were to be accepted into the group. This is why rejection hurts so much - it’s a warning mechanism that we are in physical danger, isolated from the safety of the group. 
+Making crass remarks is usually the paleolimbic brain in charge. *The Socratic method forces the prefrontal brain to kick in*. 
+
+
+## 4.2. Extrinsic Motivations
+
+**Emotional feelings of hurt generate the same brain response as physical pain**. We have evolved to be deeply *social animals and this gives rise to our extrinsic or secondary motivations*. This kicks in at the neolimbic level to help us come together as a group and adapt to each other. 
+
+The more alike we are, the more likely we were to be accepted into the group. 
+This is **why rejection hurts so much** - it’s a *warning mechanism that we are in physical danger*, isolated from the safety of the group. 
 
 The opinions of others mattered and we adapted our behaviour to the norms of the group. 
 
+
 Characteristics of extrinsic motivations:
 
-- Variable. They change over time or depending on the group. 
-- Cost energy. They don’t come naturally and require intentional work 
-- Results driven. If the behaviour is successful, the motivation is reinforced, otherwise it fades away. 
+- **Variable**. They change over time or depending on the group. 
+- *Cost energy*. They don’t come naturally and require intentional work.
+- *Results-driven*. If the behaviour is successful, the motivation is reinforced, otherwise it fades away. 
 
 
-When hiring people, it is helpful to determine whether the role fits a person’s intrinsic or extrinsic motivations. 
-A successful way to do this is to match the job description to a personality type (or two) and ask questions to determine whether a person shows traits of that personality type. 
+When hiring people, it is helpful to *determine whether the role fits a person’s intrinsic or extrinsic motivations*. 
+A successful way to do this is to *match the job description to a personality type* (or two) and *ask questions to determine whether a person shows traits of that personality type*. 
 
-Another case is when we change somebody’s role to include more tasks which are not aligned with their intrinsic motivations. Research shows that only 30% of the job needs to be aligned with our intrinsic motivations in order for their overall job to feel enjoyable. We have a high tolerance for bitch work. But obviously we should aim for higher than 30%. 
-
-
-## Employee engagement
-
-There are two ingredients to achieve employee engagement. 
-
-Oxytocin makes sure the team bonds. Dopamine makes sure each individual enjoys their work. 
-
-### Oxytocin
-
-Oxytocin is the love hormone and regulates our relaxation, trust and psychological stability. It can neutralise the negative effects of stress by lowering cortisol levels. It causes our team to be more cohesive, less stressed, help each other more. 
-
-Caring and sharing is the key to releasing oxytocin. Collaborative projects, create interdependencies, promote knowledge sharing. Give them shared responsibility and shared rewards. 
+Another case is when we change somebody’s role to include more tasks which are not aligned with their intrinsic motivations. Research shows that **only 30% of the job needs to be aligned with our intrinsic motivations in order for their overall job to feel enjoyable**. *(We have a high tolerance for bitch work.)* But obviously we should aim for higher than 30%. 
 
 
-### Dopamine
+## 4.3. Employee Engagement
 
-Hormone responsible for reward and pleasure. It fades away and we become used to a stimulus - if an activity (or drug) gives us a dopamine hit now, then next time it will give slightly less. Or from another perspective, we will need more of the stimulus to get the same dopamine hit next time. This is the key behind addiction. 
+There are two ingredients to achieve employee engagement:
 
-Anticipation of a stimulus triggers the dopamine hit, so anticipation is a key part. Hire based on intrinsic motivations so that people anticipate a dopamine hit from doing their job. 
+1. **Oxytocin** makes sure the team bonds. 
+2. **Dopamine** makes sure each individual enjoys their work. 
 
-The job needs to evolve to keep things interesting and keep releasing dopamine. Adapt objectives. Set goals over shorter time frames to give a steady stream of dopamine hits. 
+### 4.3.1. Oxytocin
 
+Oxytocin is the love hormone and regulates our **relaxation, trust and psychological stability**. It can *neutralise the negative effects of stress by lowering cortisol levels*. It causes our team to be more cohesive, less stressed, help each other more. 
+
+**Caring and sharing** is the key to releasing oxytocin. Collaborative projects, create interdependencies, promote knowledge sharing. Give them shared responsibility and shared rewards. 
+
+
+### 4.3.2. Dopamine
+
+Hormone responsible for **reward and pleasure**. 
+
+It fades away and we become used to a stimulus - if an activity (or drug) gives us a dopamine hit now, then next time it will give slightly less. Or from another perspective, *we will need more of the stimulus to get the same dopamine hit next time*. This is the key behind addiction. 
+
+**Anticipation** of a stimulus triggers the dopamine hit, not just the stimulus itself, so anticipation is a key part. *Hire based on intrinsic motivations* so that people anticipate a dopamine hit from doing their job. 
+
+The **job needs to evolve** to keep things interesting and *keep releasing dopamine*. Adapt objectives. Set goals over shorter time frames to give a *steady stream of dopamine hits*. 
 Celebrate achievements. 
 
-## Red Flags
-### Instant Gratification
 
-The ability to delay gratification is a strong predictor of success in life. 
+## 4.4.Red Flags
+### 4.4.1. Instant Gratification
 
-Delaying gratification is about more than just sheer willpower. It depends on our upbringing and our level of trust. If you believe the world is stable and trustworthy, you will feel more comfortable sacrificing now and be confident that you will see a reward later. 
+The **ability to delay gratification** is a strong predictor of success in life.
+
+Delaying gratification is about more than just sheer willpower. It *depends on our upbringing and our level of trust*. If you **believe the world is stable and trustworthy**, you will feel more comfortable sacrificing now and be confident that you will see a reward later. 
 If you see the world as hostile, you will prioritise instant, certain rewards. 
+
 
 We need to answer the following questions about our team:
 
-- How many of your team members understand why they are working? Do they know the vision?
-- How important is that vision to them?
-- Do they trust your capabilities to achieve that vision?
-
-Repetition is key. We can’t just say it once and expect them to believe it. What the brain hears repeated becomes true. 
-
-The manager is part of the team, not a separate entity. 
+- How many of your team members understand *why* they are working? Do they know the *vision*?
+- How important is that vision *to them*?
+- Do they *trust your capabilities to achieve that vision*?
 
 
-### Self evaluation
+**Repetition is key**. We can’t just say it once and expect them to believe it. What the brain hears repeated becomes true. 
+*Repetition is key*.
+Repetition is key.
 
-The dunning Kruger effect. 
-Ignorance begets confidence, not knowledge. 
+The manager is *part of the team, not a separate entity*. 
+
+
+### 4.4.2. Self Evaluation
+
+The **Dunning-Kruger** effect: ignorance begets confidence, not knowledge. 
 
 Incompetent people overestimate their skills. Competent people underestimate their skills. 
 
-Hiring and promotions are susceptible to being gamed by overconfident incompetent people. Micromanagement is another effect if a clueless manager thinks he knows more than his team. 
+Hiring and promotions are susceptible to being *gamed* by overconfident incompetent people. Micromanagement is another effect if a clueless manager thinks he knows more than his team. 
 
-Those more susceptible to overconfidence:
-- at a paleolimbic level this is dominant and axial behaviour
-- At a neolimbic level this is extroverted personalities: philosopher, animator, strategist, participative 
+Those more **susceptible to overconfidence**:
 
-The opposite is true for those susceptible to underestimating their abilities. 
-
-360 feedback and peer review helps combat the Dunning Kruger effect. Measurable standards help too. Check references when hiring. 
+- At a paleolimbic level this is *dominant and axial* behaviour
+- At a neolimbic level this is *extroverted personalities*: philosopher, animator, strategist, participative 
 
 
-### Workaholism
+The opposite is true for those **susceptible to underestimating** their abilities. 
+
+Peer review and 360 feedback helps combat the Dunning-Kruger effect. Measurable standards help too. Check references when hiring. 
+
+
+### 4.4.3. Workaholism
 
 Obsessions vs passions. 
-Passion is about trying to repeat a pleasant experience. 
-Obsession is about trying to avoid an unpleasant experience. We overcompensate by behaving in an obsessive way. This leads to workaholism. 
 
-It is easy to think this is desirable in the workplace, but we should seek to avoid it. It is unsustainable, leads to resentment in that employee and others in the team, and leads to burnout. It is an indication of more deep rooted problems in that person. They are fleeing something else. 
+**Passion** is about trying to *repeat a pleasant experience*. 
+**Obsession** is about trying to *avoid an unpleasant experience*. 
+
+We overcompensate by behaving in an obsessive way. This leads to workaholism. It is easy to think this is desirable in the workplace, but we should seek to **avoid it**. It is unsustainable, leads to resentment in that employee and others in the team, and leads to burnout. It is an *indication of more deep-rooted problems in that person*. They are **fleeing something else**. 
+
 
 An obsession is different from an intrinsic motivation because:
 
-- there is no sense of reward when achieving something, just the immediate need to do even more. Filling a bottomless void. 
-- generates strong emotional reactions 
+- There is no sense of reward when achieving something, just the immediate need to do even more. Filling a bottomless void. 
+- Generates strong emotional reactions 
 - Energy draining
 
 
 How to handle workaholism in an employee?
 
-- Take away the object of obsession, ie tell them to take a holiday. If they object, they likely are addicted. 
+- Take away the object of obsession, i.e. tell them to take a holiday. If they object, they likely are addicted. 
 - “Blow hot and cold” - we value and appreciate you, but we also prioritise balance and want to place a clear limit. 
 
 
@@ -487,3 +501,7 @@ Conclusions:
 - Adapt their goals along the way. 
 - Develop our own train skills. 
 
+
+# References
+
+- [Gregory Caremans "The Science of Leadership" Udemy course](https://www.udemy.com/share/101qFi3@d9FzugWBnZQdFP1OXY-opfuBe12IaAv4Ce6N04ohbZFAFqPS5nD3SF9YqduZymf2/3)
