--- a/posts/business/science_of_leadership/leadership.qmd
+++ b/posts/business/science_of_leadership/leadership.qmd
@@ -434,72 +434,100 @@ How to handle workaholism in an employee?
 
 # 5. Our Environment / Context
 
-The social environment (the people) is one of the most important factors in influencing our behaviour. Mimetism is embedded in our evolution; we have “mirror neurons” which make us experience in our brains the things we see others do. Lead by example. The mirror neurons mean we also have group emotions; when one person is treated badly, we all feel bad. 
+Our social environment (the people) is one of the most important factors in influencing our behaviour. 
 
-A team is not the sum of individuals. Previous neuroscience research on productivity focused on the individual. The Hawthorne experiments studied productivity in a social setting. The conclusions were that the environment can have as strong an impact on individual performance as innate individual ability. 
+Mimetism is embedded in our evolution; we have **“mirror neurons”** which *make us experience in our brains the things we see others do*. Lead by example. The mirror neurons mean we also have group emotions; when one person is treated badly, we all feel bad. 
 
-The Hawthorne effect: individuals alter their behavior or performance when they know they are being observed. This is independent of any actual intervention being applied. 
+## 5.1. The Hawthorne Experiment
+A team is not the sum of individuals. 
+
+Previous neuroscience research on productivity focused on the individual. The Hawthorne experiments studied productivity in a social setting. The conclusions were that the environment can have as strong an impact on individual performance as innate individual ability. 
+
+::: {.callout-tip title="The Hawthorne Effect"}
+Individuals alter their behavior or performance *when they know they are being observed*. This is *independent of any actual intervention* being applied. 
+:::
 
 Working in a group leads all members to work to that standard, which is oftentimes higher than any externally imposed target standard set by management. Let people work in teams and rely on each other. 
 
-We work differently in a group than we would as individuals. Sometimes this means 1+1=3 but other times it means 1+1=1. 
+We work differently in a group than we would as individuals. Sometimes this means `1+1=3` but other times it means `1+1=1`. 
 
-The conformity experiment. In a group setting when asked to say which of 3 lines is the same length as the example line, 5 stooges and 1 real person answered in sequence. The stooges all gave the same wrong answer and 37% of the time the real person agreed despite it being clearly wrong. 
+
+## 5.2. The Conformity Experiment
+In a group setting when asked to say which of 3 lines is the same length as the example line, 5 stooges and 1 real person answered in sequence. The stooges all gave the same wrong answer and 37% of the time the real person agreed despite it being clearly wrong. 
+
+::: {.callout-tip title="The Conformity Effect"}
+Individuals may trust the group over their own knowledge, even when the group is clearly wrong. 
+:::
+
 
 Implications:
 
 - Don’t assume “yes” just because no one says “no”. 
 - Don’t ask “any questions?“. Ask “who has the first question?”. 
-- Don’t use meetings to generate ideas, ask feedback or get buy-in. 
-- Interact on both individual level and group level
-- Have everyone prepare BEFORE meetings. 
+- *Don’t use meetings to generate ideas*, ask feedback or get buy-in. 
+- Interact on both **individual-level and group-level**.
+- Have everyone prepare BEFORE meetings.
 - Fear reinforces the conformity effect. 
 
-Authority vs leadership. 
-Authority is less effective than leadership. It triggers the fear response which encourages conformity; safety in numbers. 
 
-Leadership is about empowering people. Authority is the opposite. 
+## 5.3. Fear of Authority
+Fear of authority is reinforced from an early age, and we are **conditioned to blindly comply**. 
 
-Fear of authority is reinforced from an early age, and we are conditioned to blindly comply. 
+The **Milgram electric shock experiment** is a good example of conformity to authority. Participants delivered painful electric shocks to unseen participants just because somebody in a white coat told them to proceed.
 
-The Milgram electric shock experiment is a good example of conformity to authority. 
+In the **Stanford prison experiment**, participants were split into guards and prisoners. Without prompting, the guards adopted heavy-handed tactics and abused the prisoners. The 2 week experiment was cut short early after 6 days due to fears around the prisoners' safety.
 
-The Stanford prison experiment. Participants were split into guards and prisoners. Without prompting, the guards adopted heavy handed tactics and abused the prisoners. The 2 week experiment was cut short early after 6 days. 
+Put **normal people in an abnormal context** and we can make them do almost anything. 
 
-Put normal people in an abnormal context and we can make them do almost anything. 
+
+::: {.callout-tip title="Authority vs Leadership"}
+Authority is less effective than leadership. It *triggers the fear response* which encourages conformity; safety in numbers. 
+
+Leadership is about **empowering people**. Authority is the opposite. 
+:::
+
 
 Implications:
 
-- authority forces people to comply, but at the expense of any critical thinking. 
-- authority negatively effects autonomy, responsibility, creativity, proactivity 
+- Authority forces people to comply, but *at the expense of any critical thinking*. 
+- Authority negatively effects autonomy, responsibility, creativity, proactivity 
 - Authority generates resentment, passive aggression, high levels of stress
 - Power corrupts
 
 
-## The Pygmalion Effect
-The Pygmalion effect is also known as the self-fulfilling prophecy. It is a psychological phenomenon where high expectations lead to improved performance, and low expectations lead to diminished performance. How we think about others influences how they perform. 
+## 5.4. The Pygmalion Effect
+The Pygmalion effect is also known as the self-fulfilling prophecy. It is a psychological phenomenon where high expectations lead to improved performance, and low expectations lead to diminished performance. 
+
+
+::: {.callout-tip title="The Pygmalion Effect"}
+How we think about others influences how they perform. 
+:::
+
 
 Implications:
 
-- manager expectations determine performance and career progress
+- Manager expectations determine performance and career progress
 - Good managers create high performance expectations 
-- We do what we BELIEVE we’re expected to do
+- We do what we **believe** we’re expected to do
 
 
 Conditions:
 
-- You have to mean it. The high expectations need to be genuine. 
-- Expectations should be realistic (not just high). If someone repeatedly tried and fails to meet expectations then motivation drops. Motivation (y axis) vs probability of success (x-axis). Upside down parabola, motivation peaks when p(success)=0.5 - too easy or too hard are both demotivating. 
-- Expectations are linked to how managers see themselves 
+- You have to mean it. The high expectations need to be **genuine**. 
+- Expectations should be **realistic** (not just high). If someone repeatedly tried and fails to meet expectations then motivation drops. Motivation (y axis) vs probability of success (x-axis). Upside down parabola, motivation peaks when p(success)=0.5 - too easy or too hard are both demotivating. 
+- Expectations are linked to *how managers see themselves*.
 - Young people are most impacted. 
 
+<!-- TODO GJ -->
+Motivation (y axis) vs probability of success (x-axis). Upside down parabola, motivation peaks when p(success)=0.5 - too easy or too hard are both demotivating. 
+<!-- Graph here -->
 
 Conclusions:
 
 - Hire intrinsically motivated people.
 - Communicate our high expectations repeatedly. 
 - Adapt their goals along the way. 
-- Develop our own train skills. 
+- Develop our own training skills. 
 
 
 # References
