--- a/posts/business/science_of_leadership/leadership.qmd
+++ b/posts/business/science_of_leadership/leadership.qmd
@@ -29,7 +29,7 @@ Controls the **three possible responses to a threat**:
 In the modern world, this survival instinct kicks in when we experience stress or anxiety, even if it is not life threatening. As a response to stress, these manifest as:
 
 - **Flight** -  Anxiety and fidgeting.
-- **Fight** - Aggression and anger
+- **Fight** - Aggression and anger.
 - **Freeze** - Helplessness.
 
 We can recognise the **reptilian brain being active** when people behave in one of the three **stress responses**. 
